# geozl

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  SPEC.md  _config.yml
.github/workflows/: ci.yml  release.yml
bindings/python/: hatch_build.py  pyproject.toml
bindings/python/geozl/: _2d.py  __init__.py  _codec.py  _ffi.py  lossless.py  lossy.py  train.py
bindings/python/geozl/lossless/: __init__.py  _predictor.py  average.py  binoffset.py  complex.py  deinterleave.py  delta_n.py  delta_w.py  floatmult.py  floatquant.py  intmult.py  med.py  planar.py  wp_static.py
bindings/python/geozl/lossy/: __init__.py  _base.py  quant_linear.py
bindings/python/test/: oracle_wp_static.py  test_2d.py  test_codecs.py  test_complex.py  test_deinterleave.py  test_ffi.py  test_headers.py  test_malformed.py  test_nodes.py  test_wpstatic.py
core/: CMakeLists.txt
core/include/geozl/: ctids.h  export.h  geozl.h  kernels.h
core/src/: decoder_registry.c  encoder_registry.c  kernels.c  register_decoders.c  register_lossless.c  register_lossy.c
core/src/2d/: 2d.c
core/src/average/: auto_average.c  auto_average.h  decode_average_binding.c  decode_average_binding.h  decode_average_kernel.c  decode_average_kernel.h  encode_average_binding.c  encode_average_binding.h  encode_average_kernel.c  encode_average_kernel.h  graph_average.h  header_average.c  header_average.h  spec.md
core/src/binoffset/: decode_binoffset_binding.c  decode_binoffset_binding.h  decode_binoffset_kernel.c  decode_binoffset_kernel.h  encode_binoffset_binding.c  encode_binoffset_binding.h  encode_binoffset_kernel.c  encode_binoffset_kernel.h  spec.md
core/src/common/: graph_num1to1.h  graph_num1to2.h  raster.h
core/src/deinterleave/: decode_deinterleave_binding.c  decode_deinterleave_binding.h  decode_deinterleave_kernel.c  decode_deinterleave_kernel.h  encode_deinterleave_binding.c  encode_deinterleave_binding.h  encode_deinterleave_kernel.c  encode_deinterleave_kernel.h  graph_deinterleave.h  spec.md
core/src/delta_n/: auto_delta_n.c  auto_delta_n.h  decode_delta_n_binding.c  decode_delta_n_binding.h  decode_delta_n_kernel.c  decode_delta_n_kernel.h  encode_delta_n_binding.c  encode_delta_n_binding.h  encode_delta_n_kernel.c  encode_delta_n_kernel.h  graph_delta_n.h  header_delta_n.c  header_delta_n.h
core/src/delta_w/: auto_delta_w.c  auto_delta_w.h  decode_delta_w_binding.c  decode_delta_w_binding.h  decode_delta_w_kernel.c  decode_delta_w_kernel.h  encode_delta_w_binding.c  encode_delta_w_binding.h  encode_delta_w_kernel.c  encode_delta_w_kernel.h  graph_delta_w.h  header_delta_w.c  header_delta_w.h
core/src/floatmult/: decode_floatmult_binding.c  decode_floatmult_binding.h  decode_floatmult_kernel.c  decode_floatmult_kernel.h  encode_floatmult_binding.c  encode_floatmult_binding.h  encode_floatmult_kernel.c  encode_floatmult_kernel.h  floatmult_common.h  spec.md
core/src/floatquant/: decode_floatquant_binding.c  decode_floatquant_binding.h  decode_floatquant_kernel.c  decode_floatquant_kernel.h  encode_floatquant_binding.c  encode_floatquant_binding.h  encode_floatquant_kernel.c  encode_floatquant_kernel.h  spec.md
core/src/intmult/: decode_intmult_binding.c  decode_intmult_binding.h  decode_intmult_kernel.c  decode_intmult_kernel.h  encode_intmult_binding.c  encode_intmult_binding.h  encode_intmult_kernel.c  encode_intmult_kernel.h  spec.md
core/src/med/: auto_med.c  auto_med.h  decode_med_binding.c  decode_med_binding.h  decode_med_kernel.c  decode_med_kernel.h  encode_med_binding.c  encode_med_binding.h  encode_med_kernel.c  encode_med_kernel.h  graph_med.h  header_med.c  header_med.h  spec.md
core/src/planar/: auto_planar.c  auto_planar.h  decode_planar_binding.c  decode_planar_binding.h  decode_planar_kernel.c  decode_planar_kernel.h  encode_planar_binding.c  encode_planar_binding.h  encode_planar_kernel.c  encode_planar_kernel.h  graph_planar.h  header_planar.c  header_planar.h
core/src/quant_linear/: decode_quant_linear_binding.c  decode_quant_linear_binding.h  decode_quant_linear_kernel.c  decode_quant_linear_kernel.h  encode_quant_linear_binding.c  encode_quant_linear_binding.h  encode_quant_linear_kernel.c  encode_quant_linear_kernel.h  graph_quant_linear.h  quant_linear_dtype.h  spec.md
core/src/wp_static/: auto_wp_static.c  auto_wp_static.h  decode_wp_static_binding.c  decode_wp_static_binding.h  decode_wp_static_kernel.c  decode_wp_static_kernel.h  encode_wp_static_binding.c  encode_wp_static_binding.h  encode_wp_static_kernel.c  encode_wp_static_kernel.h  graph_wp_static.h  header_wp_static.c  header_wp_static.h  spec.md  train_wp_static.c  train_wp_static.h
docs/: README.md  adding-a-codec.md  api-high.html  api-low.html  benchmark.html  docs.html  index.html  links.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/codecs/: average.html  deinterleave.html  delta-n.html  delta-w.html  med.html  planar.html  quant-linear.html  wp-static.html
docs/notebooks/: high-level-api.ipynb
fuzz/: decode_fuzzer.c  gen_corpus.py
