[build-system]
requires      = ["hatchling>=1.25"]
build-backend = "hatchling.build"


[project]
name            = "geozl"
dynamic         = ["version"]
description     = "Geospatial codec extensions for OpenZL."
readme          = "../../README.md"
license         = { text = "BSD-3-Clause" }
requires-python = ">=3.11"

authors = [
    { name = "Cesar Aybar",     email = "cesar@asterisk.coop" }
]

dependencies = [
    "numpy>=1.24",
    "cffi>=1.17",
    "openzl>=0.2",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: C",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Typing :: Typed",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.urls]
Homepage   = "https://github.com/asterisk-labs/geozl"
Repository = "https://github.com/asterisk-labs/geozl"
Issues     = "https://github.com/asterisk-labs/geozl/issues"


[tool.hatch.version]
path    = "../../VERSION"
pattern = "(?P<version>\\S+)"

[tool.hatch.build.targets.wheel]
packages  = ["geozl"]
artifacts = [
    "geozl/_lib/*.so",
    "geozl/_lib/*.so.*",
    "geozl/_lib/*.dylib",
    "geozl/_lib/*.dll",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "geozl/**",
    "tests/**",
    "hatch_build.py",
    "README.md",
]
exclude = [
    "geozl/_lib/*.so",
    "geozl/_lib/*.so.*",
    "geozl/_lib/*.dylib",
    "geozl/_lib/*.dll",
]


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --strict-markers"

[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "NPY"]